# tda-for-vqas

./: .gitignore  README.md  gitignore  pyproject.toml  requirements.txt  requirements_3.10.11.txt  setup.cfg
experiment_results/BP_NG/: qaoa_id_20_landscape_BP_NG_grid.json
experiment_results/BP_NG/2026_01_20_08_45_24/: qaoa_id_20_landscape_BP_NG_grid.json
experiment_results/BP_NG/2026_01_20_09_06_00/: qaoa_id_20_landscape_BP_NG_grid.json
experiment_results/BP_NG/2026_01_20_16_12_42/: qaoa_id_20_landscape_BP_NG_LHS.json
experiment_results/BP_NG/big_excerpt/: qaoa_id_20_landscape_BP_NG_grid.json
experiments/: experiment_analysis_main.py  metrics_experiment.py
experiments/QAOA/: bp_ng_experiment_main.py  qaoa_experiment_analysis_main.py  qaoa_hamiltonian_analysis.py  qaoa_main.py  qaoa_prepare_landscapes.py  qaoa_test.py
experiments/QNN/: qnn_experiment_analysis_main.py  qnn_inital_tests.py  qnn_main.py  qnn_prepare_landscapes.py
resources/: sample_points_1000_6D_0_2pi.json  sample_points_100_6D_0_2pi.json
src/: FP_initial_test.py  __init__.py  bp_ng_experiment_main.py  experiment_analysis_main.py  main.py  qaoa_main.py  qaoa_prepare_landscapes.py  qaoa_test.py  qnn_inital_tests.py  qnn_main.py  qnn_prepare_landscapes.py  test.py
src/qaoa/: __init__.py  _metrics.py  data_generation.py  plots.py  utils.py
src/qnn/: __init__.py  cuda_qnn.py  data.py  qnn.py  qnn_cost_func.py  qnn_landscapes.py  qnn_untils.py
src/utils/: data_utils.py  file_utils.py  metric_utils.py  metrics.py  resources.py  sampling_utils.py
src/vqe/: __init__.py
(+1443 files in other folders)
